# writer-ai

./: .pre-commit-config.yaml  AGENTS.MD  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  README.md  main.py  pyproject.toml  railway.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  chapter.py  health.py  outline.py  rewrite.py
backend/app/clients/: __init__.py  gemini.py
backend/app/core/: __init__.py  config.py  deps.py  heartbeat.py  logging.py  middleware.py  usage.py
backend/app/domain/: __init__.py  services.py
backend/app/schemas/: common.py  edit.py  outline.py  rewrite.py
backend/tests/: __init__.py  conftest.py  test_content_type.py  test_health.py  test_outline_api.py  test_rewrite_api.py  test_schemas.py  test_usage.py
docs/: ENGINEERING_GUIDELINES.md  LLM_SPEC.md  PRODUCT.md  SECURITY_TODOS.md  SECURITY_WORKSTREAM_A.md  SECURITY_WORKSTREAM_B.md
docs/launch/: AGENT_1_BACKEND.md  AGENT_2_FRONTEND.md  HUMAN.md
frontend/: .gitignore  README.md  components.json  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  posthog.tsx  sitemap.ts
frontend/components/: chapter-editor.tsx  command-box.tsx  editor-header.tsx  highlighted-text.tsx  scaffolding-sidebar.tsx  tether-overlay.tsx  triage-view.tsx
frontend/e2e/: smoke.spec.ts
frontend/hooks/: use-toast.ts
frontend/lib/: anchor-segments.ts  api.test.ts  api.ts  example-data.ts  (+4 more)
(+33 files in other folders)
