[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Writer AI — Rewrite from Outline MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.132.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]
